# webone

./: Cargo.toml  README.md  database.db  justfile
migrations/: 20251111033004_create_contacts.down.sql  20251111033004_create_contacts.up.sql  20251112040744_seed_contacts.down.sql  20251112040744_seed_contacts.up.sql
src/: contacts.rs  lib.rs  main.rs  templates.rs  utils.rs
static/: site.css
templates/: edit.html  err_layout.html  error.html  error_message.html  index.html  layout.html  new.html  show.html  success_redirect.html
