[package]
name = "webone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["serde_json"] }
axum = { version = "0.8.6", features = ["form", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
