[package]
name = "webone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = { version = "0.14.0", features = ["serde_json"] }
axum = { version = "0.8.6", features = ["form", "macros"] }
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "macros", "runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
